# azure-pricing-dashboard

./: .gitignore  README.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .gitignore  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py
backend/src/api/: catalog.py  deps.py  export.py  pricing.py
backend/src/guidance/: guidance.json
backend/src/models/: common.py  comparison_row.py  export_record.py  hybrid_benefit.py  price_point.py  query.py  service_summary.py  snapshot.py
backend/src/services/: cache.py  catalog.py  datastore.py  exporters.py  guidance.py  hybrid_benefit.py  pricing.py  retail_prices.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py  conftest.py  test_catalog_contract.py  test_pricing_contract.py
backend/tests/integration/: test_export_parity.py  test_hybrid_benefit_known_price.py  test_region_overview.py  test_vm_region_detail.py
backend/tests/unit/: test_export_metadata.py  test_guidance.py  test_hybrid_benefit.py  test_hybrid_benefit_gaps.py  test_not_available.py
backend/tools/: curate_guidance.py
data/pricing/: api-management_indonesiacentral.json  azure-app-service_indonesiacentral.json  azure-app-service_southeastasia.json  (+10 more)
deploy/: .env.example  Caddy.Dockerfile  Caddyfile  Dockerfile  container-group-app.yaml  container-group.yaml  deploy-app-only.ps1  deploy.ps1  deploy.sh
frontend/: index.html
(+16 files in other folders)
