[project]
name = "azure-pricing-dashboard"
version = "0.1.0"
description = "Region-first Azure pricing dashboard (PAYG / 1-yr RI / 3-yr RI / Hybrid Benefit) over the Azure Retail Prices API."
requires-python = ">=3.12"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]
